fix: stretch overlay to end of results

--- a/components/Results/Results.module.css
+++ b/components/Results/Results.module.css
@@ -1,4 +1,5 @@
 .wrapper {
+  position: relative;
   background-color: var(--effort-background);
 }
 
@@ -32,9 +33,11 @@
 
 .spinnerWrapper {
   position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   z-index: 100;
-  width: 100%;
-  height: 100%;
   background-color: var(--effort-background);
   opacity: 0.75;
 }
